tests/fixtures/diagnostics/compile-tab-expansion.stderr
Error: Undefined variable.
  ╷
2 │     color: $nope;
  │            ^^^^^
  ╵
  compile-tab-expansion.scss 2:9  root stylesheet
